[tool.poetry]
name = "cpp-hash-tables"
version = "0.0.0"
description = ""
authors = []
readme = "README.md"
packages = [{ include = "scripts" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
# Some tools require setuptools.
setuptools = "^70.3.0"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
breathe = "^4.35.0"
cmakelang = "^0.6.13"
doc8 = "^1.1.1"
myst-parser = "^3.0.1"
pre-commit = "^3.7.1"
pylint = "^3.2.5"
sphinx = "^7.3.7"
sphinx-orange-book-theme = "^0.11.0"
sphinx-autobuild = "^2024.4.16"
sphinxcontrib-plantuml = "^0.30"
mpmath = "^1.3.0"
clang-tidy-checker = "^0.5.0"
lcov-cobertura = "^2.0.2"
click = "^8.1.7"
tqdm = "^4.66.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
