[tool.poetry]
name = "cpp-hash-tables"
version = "0.0.0"
description = ""
authors = []
readme = "README.md"
packages = [{ include = "scripts" }]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
# Some tools require setuptools.
setuptools = "^75.6.0"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
breathe = "^4.35.0"
cmakelang = "^0.6.13"
doc8 = "^1.1.2"
myst-parser = "^4.0.0"
pre-commit = "^4.0.1"
pylint = "^3.3.3"
sphinx = "^8.1.3"
sphinx-orange-book-theme = "^0.15.0"
sphinx-autobuild = "^2024.10.3"
sphinxcontrib-plantuml = "^0.30"
mpmath = "^1.3.0"
clang-tidy-checker = "^0.6.0"
lcov-cobertura = "^2.0.2"
click = "^8.1.8"
tqdm = "^4.67.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
