[tool.poetry]
name = "cpp-hash-tables"
version = "0.0.0"
description = ""
authors = []
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
# Some tools require setuptools.
setuptools = "^75.8.2"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
breathe = "^4.36.0"
cmakelang = "^0.6.13"
doc8 = "^1.1.2"
myst-parser = "^4.0.1"
pre-commit = "^4.1.0"
pylint = "^3.3.4"
sphinx = "^8.2.1"
sphinx-orange-book-theme = "^0.15.0"
sphinx-autobuild = "^2024.10.3"
sphinxcontrib-plantuml = "^0.30"
mpmath = "^1.3.0"
clang-tidy-checker = "^0.6.0"
lcov-cobertura = "^2.1.1"
click = "^8.1.8"
tqdm = "^4.67.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
